====NEWS ABOUT TEA====
TEA 60.2.0, may 2021
---------------------------------------

+ Polish UI and Manual translation by Krzysztof Jaśkiewicz
+ Rust hl support
+ The time consuming operations such as "Find in files" can be interrupted.

   Stay tuned.
   Peter Semiletov