@@ -1,11 +1,14 @@
 =====НОВОСТИ ПРО ТИА====
-ТИА 60.2.0, май 2021
+ТИА 60.3.0, июнь 2021
 ------------------------------------------------------
 http://semiletov.org/tea/
 ======================
 
-+ Polish UI and Manual translation by Krzysztof Jaśkiewicz
-+ Rust hl support
-+ The time consuming operations such as "Find in files" can be interrupted.
+   Что нового?
+
++ Перевод на польский интерфейса и документации. Спасибо, Krzysztof Jaśkiewicz!
++ Подсветка синтаксиса Rust.
++ Долговременные операции вроде поиска в файлах теперь можно прерывать появляющейся кнопкой. 
+* Исправлена поломанная поддержка hunspell в связке с cmake.
 
    С кирпичным пролетарским приветом, Петр Семилетов!
